server/tests/features/snapshots/features__otlp_spans__otlp_spans__error_get_offer_404.snap
---
source: server/tests/features/otlp_spans.rs
assertion_line: 203
expression: lines
---
[
  {
    "attributes": {
      "http.request.method": "[string]",
      "http.response.status_code": "[int]",
      "http.route": "[string]",
      "network.protocol.version": "[string]",
      "server.address": "[string]",
      "span.type": "[string]",
      "target": "[string]",
      "url.path": "[string]",
      "url.scheme": "[string]",
      "user_agent.original": "[string]"
    },
    "dropped_attributes_count": "[int]",
    "dropped_events_count": "[int]",
    "dropped_links_count": "[int]",
    "end_time_unix_nano": "[int]",
    "flags": "[int]",
    "kind": "[int]",
    "name": "GET /offers/{partition}/{id}",
    "parent_span_id": null,
    "resource": {
      "service.name": "[string]",
      "service.version": "[string]",
      "telemetry.sdk.language": "[string]",
      "telemetry.sdk.name": "[string]",
      "telemetry.sdk.version": "[string]"
    },
    "span_id": "[bytes]",
    "start_time_unix_nano": "[int]",
    "status": {
      "code": "STATUS_CODE_UNSET",
      "message": "[string]"
    },
    "trace_id": "[bytes]",
    "trace_state": "[string]"
  },
  {
    "attributes": {
      "http.request.method": "[string]",
      "http.response.status_code": "[int]",
      "http.route": "[string]",
      "network.protocol.version": "[string]",
      "server.address": "[string]",
      "span.type": "[string]",
      "target": "[string]",
      "url.path": "[string]",
      "url.scheme": "[string]",
      "user_agent.original": "[string]"
    },
    "children": [
      {
        "attributes": {
          "target": "[string]"
        },
        "children": [
          {
            "attributes": {
              "target": "[string]"
            },
            "children": [
              {
                "attributes": {
                  "target": "[string]"
                },
                "dropped_attributes_count": "[int]",
                "dropped_events_count": "[int]",
                "dropped_links_count": "[int]",
                "end_time_unix_nano": "[int]",
                "flags": "[int]",
                "kind": "[int]",
                "name": "offer",
                "parent_span_id": "[bytes]",
                "span_id": "[bytes]",
                "start_time_unix_nano": "[int]",
                "status": {
                  "code": "STATUS_CODE_UNSET",
                  "message": "[string]"
                },
                "trace_id": "[bytes]",
                "trace_state": "[string]",
                "type": "span"
              }
            ],
            "dropped_attributes_count": "[int]",
            "dropped_events_count": "[int]",
            "dropped_links_count": "[int]",
            "end_time_unix_nano": "[int]",
            "flags": "[int]",
            "kind": "[int]",
            "name": "get_offer",
            "parent_span_id": "[bytes]",
            "span_id": "[bytes]",
            "start_time_unix_nano": "[int]",
            "status": {
              "code": "STATUS_CODE_UNSET",
              "message": "[string]"
            },
            "trace_id": "[bytes]",
            "trace_state": "[string]",
            "type": "span"
          }
        ],
        "dropped_attributes_count": "[int]",
        "dropped_events_count": "[int]",
        "dropped_links_count": "[int]",
        "end_time_unix_nano": "[int]",
        "flags": "[int]",
        "kind": "[int]",
        "name": "offer",
        "parent_span_id": "[bytes]",
        "span_id": "[bytes]",
        "start_time_unix_nano": "[int]",
        "status": {
          "code": "STATUS_CODE_UNSET",
          "message": "[string]"
        },
        "trace_id": "[bytes]",
        "trace_state": "[string]",
        "type": "span"
      }
    ],
    "dropped_attributes_count": "[int]",
    "dropped_events_count": "[int]",
    "dropped_links_count": "[int]",
    "end_time_unix_nano": "[int]",
    "flags": "[int]",
    "kind": "[int]",
    "name": "GET /offers/{partition}/{id}",
    "parent_span_id": null,
    "resource": {
      "service.name": "[string]",
      "service.version": "[string]",
      "telemetry.sdk.language": "[string]",
      "telemetry.sdk.name": "[string]",
      "telemetry.sdk.version": "[string]"
    },
    "span_id": "[bytes]",
    "start_time_unix_nano": "[int]",
    "status": {
      "code": "STATUS_CODE_UNSET",
      "message": "[string]"
    },
    "trace_id": "[bytes]",
    "trace_state": "[string]"
  }
]
